# DuexOpt

./: .gitignore  README.md  main.py  pyproject.toml
duexopt/: __init__.py  core.py  evaluator.py  exceptions.py  result.py  space.py  splitting.py  strategies.py
examples/: basic_usage.py  simple_1d_kde.py
tests/: __init__.py
